--- a/tipofweek.html
+++ b/tipofweek.html
@@ -54,9 +54,9 @@
 			
 			
 			<p>
-				<a class="btn" href="index.html"> Click here to get back to the main page   »</a>
-				<a class="btn" href="downloads.html"> Click here to go to the downloads page   »</a>
-				<a class="btn" href="suggestions.html"> Click here to go to the suggestions page »</a>
+				<a class="btn" href="index.html">  Back to the main page   »</a>
+				<a class="btn" href="downloads.html"> Go to the downloads page   »</a>
+				<a class="btn" href="suggestions.html"> Go to the suggestions page »</a>
 			</p>
 
 </div>
