--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 			</p>
 			<p>
 				<a class="btn" href="downloads.html">Go to the sugested downloads page  »</a>
-			</p><img alt="Bootstrap Image Preview" src="https://images-na.ssl-images-amazon.com/images/I/41RxsA7ia9L.png"  width="250" height="275" />
+			</p><img alt=" Download page" src="https://images-na.ssl-images-amazon.com/images/I/41RxsA7ia9L.png"  width="250" height="275" />
 	
 	</div> 
 	
