--- a/downloads.html
+++ b/downloads.html
@@ -50,7 +50,16 @@
       
 			</p> 
 			
-			
+			<style>
+
+				<style> 
+				a:link {
+ 
+					color: green;
+					background-color: transparent;
+					text-decoration: none;
+				}
+			</style>
 			<p>
 				<a class="btn" href="index.html"> Go to the main page   »</a>
 				<a class="btn" href="suggestions.html"> Go to the sugestions page »</a>
